--- a/public/profile.html
+++ b/public/profile.html
@@ -38,46 +38,44 @@
         <!-- ---------------------- header --------------------------- -->
         <div id="header">
             <nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: #e3f2fd;">
-                <div class="container-md">
+                <div class="container-md" style="width: 83%; max-width: 90%;">
 
-                    <a class="navbar-brand logo name" href="./index.html">
+                    <a class=" navbar-brand logo name" href="./index.html">
                         <img src="./assets/logo5.png" alt="" width="230" height="60">
                     </a>
                     <div id="main-header">
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav" style="align-items: center;">
 
-                                <!-- <li class="nav-item" style="margin: 3px 10px 0 0;">
+                                <li class="nav-item" style="margin: 3px 10px 0 0;" data-bs-toggle="offcanvas"
+                                    data-bs-target="#offcanvasWithBackdrop" aria-controls="offcanvasWithBackdrop">
                                     <a class="nav-link" href="#">
-                                        <div class="host">
-                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                                data-bs-target="#staticBackdrop" id="hostbutton">
-                                                我要開團
-                                            </button>
-
-                                        </div>
+                                        <img src="./assets/6590582_box_email_mail_mailbox_icon.png"
+                                            style="width: 36px;">
                                     </a>
-                                </li> -->
+                                </li>
                                 <!-- <li class="nav-item" style="display: flex;">
-                            <a class="nav-link" id="caht" href="#"><svg xmlns=" http://www.w3.org/2000/svg"
-                                    width="47" height="47" fill="currentColor" class="bi bi-chat-left-text"
-                                    viewBox="0 0 16 16">
-                                    <path
-                                        d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-                                    <path
-                                        d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
-                                </svg></a>
-                        </li> -->
+                                    <a class="nav-link" id="caht" href="#"><svg xmlns=" http://www.w3.org/2000/svg"
+                                            width="47" height="47" fill="currentColor" class="bi bi-chat-left-text"
+                                            viewBox="0 0 16 16">
+                                            <path
+                                                d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                                            <path
+                                                d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
+                                        </svg></a>
+                                </li> -->
                                 <li class="nav-item dropdown">
                                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
 
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
+                                        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
                                             fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
                                             <path fill-rule="evenodd"
                                                 d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                        </svg>
+                                        </svg> -->
+                                        <img src="./assets/3018530_buyer_customer_figure_person_portrait_icon.png"
+                                            style="width: 36px;">
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                         <li><a class="dropdown-item dropdown-sign" href="/sign.html"
@@ -730,7 +728,7 @@
                 let eventBlockRowCardTimeSmall = document.createElement('small')
                 eventBlockRowCardTimeSmall.setAttribute('class', 'text-muted')
 
-                eventBlockRowCardTimeSmall.setAttribute('id', 'start-time')
+                eventBlockRowCardTimeSmall.setAttribute('id', `start-time_${gatheringList.data[i].id}`)
 
                 // let startTime = new Date(Date.parse(new Date(gatheringList.data[i].start_at).toUTCString()))
                 console.log('gatheringList.data[i].start_at', gatheringList.data[i].start_at)
@@ -767,7 +765,7 @@
                 if (startTime > currentTime) {
                     comingEvent.appendChild(eventBlock)
 
-                    let startTimeDiv = document.getElementById('start-time')
+                    let startTimeDiv = document.getElementById(`start-time_${gatheringList.data[i].id}`)
 
                     let waiting
 
