--- a/public/gathering.html
+++ b/public/gathering.html
@@ -165,46 +165,44 @@
         <!-- ---------------------- header --------------------------- -->
         <div id="header">
             <nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: #e3f2fd;">
-                <div class="container-md">
+                <div class="container-md" style="width: 83%; max-width: 90%;">
 
                     <a class="navbar-brand logo name" href="./index.html">
                         <img src="./assets/logo5.png" alt="" width="230" height="60">
                     </a>
                     <div id="main-header">
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav" style="align-items: center;">
 
-                                <!-- <li class="nav-item" style="margin: 3px 10px 0 0;">
+                                <li class="nav-item" style="margin: 3px 10px 0 0;" data-bs-toggle="offcanvas"
+                                    data-bs-target="#offcanvasWithBackdrop" aria-controls="offcanvasWithBackdrop">
                                     <a class="nav-link" href="#">
-                                        <div class="host">
-                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                                data-bs-target="#staticBackdrop" id="hostbutton">
-                                                我要開團
-                                            </button>
-
-                                        </div>
+                                        <img src="./assets/6590582_box_email_mail_mailbox_icon.png"
+                                            style="width: 36px;">
                                     </a>
-                                </li> -->
+                                </li>
                                 <!-- <li class="nav-item" style="display: flex;">
-                            <a class="nav-link" id="caht" href="#"><svg xmlns=" http://www.w3.org/2000/svg"
-                                    width="47" height="47" fill="currentColor" class="bi bi-chat-left-text"
-                                    viewBox="0 0 16 16">
-                                    <path
-                                        d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-                                    <path
-                                        d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
-                                </svg></a>
-                        </li> -->
+                                    <a class="nav-link" id="caht" href="#"><svg xmlns=" http://www.w3.org/2000/svg"
+                                            width="47" height="47" fill="currentColor" class="bi bi-chat-left-text"
+                                            viewBox="0 0 16 16">
+                                            <path
+                                                d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                                            <path
+                                                d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
+                                        </svg></a>
+                                </li> -->
                                 <li class="nav-item dropdown">
                                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
 
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
+                                        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
                                             fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
                                             <path fill-rule="evenodd"
                                                 d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                        </svg>
+                                        </svg> -->
+                                        <img src="./assets/3018530_buyer_customer_figure_person_portrait_icon.png"
+                                            style="width: 36px;">
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                         <li><a class="dropdown-item dropdown-sign" href="/sign.html"
@@ -556,7 +554,20 @@
     <!-- --------------------------------------------------------------------------- -->
 
 
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasWithBackdrop"
+        aria-labelledby="offcanvasWithBackdropLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasWithBackdropLabel">系統訊息</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="card" style="width: 100%;">
+                <ul class="list-group list-group-flush" id=sys-message-list>
 
+                </ul>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -1042,6 +1053,143 @@
                 map = new google.maps.Map(document.getElementById("left-map"), {
                     center: initPoint,
                     zoom: 18,
+                    styles: [
+                        {
+                            "featureType": "landscape.man_made",
+                            "elementType": "geometry",
+                            "stylers": [
+                                {
+                                    "color": "#f7f1df"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "landscape.natural",
+                            "elementType": "geometry",
+                            "stylers": [
+                                {
+                                    "color": "#d0e3b4"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "landscape.natural.terrain",
+                            "elementType": "geometry",
+                            "stylers": [
+                                {
+                                    "visibility": "off"
+                                }
+                            ]
+                        },
+                        // {
+                        //     "featureType": "poi",
+                        //     "elementType": "labels",
+                        //     "stylers": [
+                        //         {
+                        //             "visibility": "off"
+                        //         }
+                        //     ]
+                        // },
+                        {
+                            "featureType": "poi.business",
+                            "elementType": "all",
+                            "stylers": [
+                                {
+                                    "visibility": "off"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "poi.medical",
+                            "elementType": "geometry",
+                            "stylers": [
+                                {
+                                    "color": "#fbd3da"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "poi.park",
+                            "elementType": "geometry",
+                            "stylers": [
+                                {
+                                    "color": "#bde6ab"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "road",
+                            "elementType": "geometry.stroke",
+                            "stylers": [
+                                {
+                                    "visibility": "off"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "road",
+                            "elementType": "labels",
+                            "stylers": [
+                                {
+                                    "visibility": "off"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "road.highway",
+                            "elementType": "geometry.fill",
+                            "stylers": [
+                                {
+                                    "color": "#ffe15f"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "road.highway",
+                            "elementType": "geometry.stroke",
+                            "stylers": [
+                                {
+                                    "color": "#efd151"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "road.arterial",
+                            "elementType": "geometry.fill",
+                            "stylers": [
+                                {
+                                    "color": "#ffffff"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "road.local",
+                            "elementType": "geometry.fill",
+                            "stylers": [
+                                {
+                                    "color": "black"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "transit.station.airport",
+                            "elementType": "geometry.fill",
+                            "stylers": [
+                                {
+                                    "color": "#cfb2db"
+                                }
+                            ]
+                        },
+                        {
+                            "featureType": "water",
+                            "elementType": "geometry",
+                            "stylers": [
+                                {
+                                    "color": "#a2daf2"
+                                }
+                            ]
+                        }
+                    ]
                 });
 
                 // let mapDiv = document.getElementById("left-map")
@@ -1305,8 +1453,12 @@
                         removeIcon.setAttribute('data-bs-whatever', "@mdo")
 
 
+                        if (user.id == hostInfo.hostId) {
+                            removeIcon.style = "width:1.3rem; height:1.3rem;"
+                        } else {
+                            removeIcon.style = "width:1.3rem; height:1.3rem; display:none;"
 
-                        removeIcon.style = "width:1.3rem;height:1.3rem;"
+                        }
 
 
 
@@ -1866,6 +2018,74 @@
 
 
 
+            //    --------------------------------------system messages block---------------------------- -->
+
+
+
+            const renderSystemMessage = async function (accessToken) {
+
+
+
+                let systemMessageRecord = await fetchData(`/api/1.0/chat/getsystemrecord`, accessToken)
+
+
+
+                // console.log('systemMessageRecord.data[0].content', systemMessageRecord.data[0].content)
+
+
+                let sysMessageList = document.getElementById('sys-message-list')
+
+
+                for (let i in systemMessageRecord.data) {
+                    // console.log('current user.id', user.id)
+                    // console.log('chatRecord[i].user_id', chatRecord[i].user_id)
+                    let sysMessageItem = document.createElement('li');
+
+                    // console.log('comapre', 'chatRecord[i].user_id: ', chatRecord[i].user_id, 'user.id:', user.id)
+                    sysMessageItem.className = "list-group-item"
+                    sysMessageItem.innerText = systemMessageRecord.data[i].content
+                    let sysMessageItemSmall = document.createElement('small');
+                    sysMessageItemSmall.className = "text-muted";
+                    let startTime = new Date(systemMessageRecord.data[i].created_at);
+                    sysMessageItemSmall.innerText = `${startTime.getUTCFullYear()}-${((parseInt(startTime.getUTCMonth()) + 1) < 10 ? '0' : '') + (parseInt(startTime.getUTCMonth()) + 1)}-${(startTime.getUTCDate() < 10 ? '0' : '') + startTime.getUTCDate()}  ${(startTime.getUTCHours() < 10 ? '0' : '') + startTime.getUTCHours()}:${(startTime.getUTCMinutes() < 10 ? '0' : '') + startTime.getUTCMinutes()}`
+
+
+
+
+
+
+
+
+
+                    sysMessageItem.appendChild(sysMessageItemSmall)
+
+
+                    sysMessageList.appendChild(sysMessageItem);
+
+                }
+
+
+                sysMessageList.scrollBy(0, sysMessageList.scrollHeight)
+
+
+
+
+            }
+
+
+
+
+
+
+
+            renderSystemMessage(accessToken)
+
+
+            // ---------------------------------------------------------------------------------------------- 
+
+
+
+
 
 
 
@@ -2196,7 +2416,7 @@
                 icon: 'success',
                 confirmButtonText: 'OK'
             }).then(function () {
-                window.location.reload();
+                window.location.href = '/sign.html';
             })
 
         })
