--- a/public/index.html
+++ b/public/index.html
@@ -569,71 +569,72 @@
 
             let targetClassName;
             let targetId;
+            targetClassName = event.target.className
+            targetId = event.target.getAttribute('idvalue')
 
-            if (event.target.className === 'eventPic') {
-                targetClassName = event.target.parentElement.className
-                targetId = event.target.parentElement.id
 
-                // alert('img')
-            } else {
-                targetClassName = event.target.className
-                targetId = event.target.id
+            // if (event.target.className === 'eventPic') {
+            //     targetClassName = event.target.parentElement.className
+            //     targetId = event.target.parentElement.id
+
+            //     // alert('img')
+            // } else {
+            //     targetClassName = event.target.className
+            //     targetId = event.target.id
+            // }
+            // alert(targetClassName)
+
+            // if (targetClassName === 'card') {
+            //     alert('click')
+
+            // alert(event.target.getAttribute('idvalue'))
+            let response
+            const xhr = new XMLHttpRequest()
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    response = JSON.parse(xhr.responseText)
+                    // response = xhr.responseText;
+                    console.log(response)
+                }
             }
 
+            const accessToken = localStorage.getItem("token")
 
-            if (targetClassName === 'gathering') {
-                // alert('click')
-
-
-
-
-                let response
-                const xhr = new XMLHttpRequest()
-                xhr.onreadystatechange = function () {
-                    if (xhr.readyState === 4 && xhr.status === 200) {
-                        response = JSON.parse(xhr.responseText)
-                        // response = xhr.responseText;
-                        console.log(response)
-                    }
+            function sendAJAX(accessToken) {
+                xhr.open('GET', `/api/1.0/tracking/clickGatheringList?id=${targetId}`)
+                if (accessToken) {
+                    // console.log('accessToken: ', accessToken)
+                    xhr.setRequestHeader('Authorization', `Bearer ${accessToken}`);
                 }
-
-                const accessToken = localStorage.getItem("token")
-
-                function sendAJAX(accessToken) {
-                    xhr.open('GET', `/api/1.0/tracking/clickGatheringList?id=${targetId}`)
-                    if (accessToken) {
-                        // console.log('accessToken: ', accessToken)
-                        xhr.setRequestHeader('Authorization', `Bearer ${accessToken}`);
-                    }
-                    xhr.send()
-                }
-
-                sendAJAX(accessToken)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                // await fetch(`/tracking/clickGatheringList?id=${targetId}`)
-                //     .then((response) => {
-                //         // 這裡會得到一個 ReadableStream 的物件
-                //         console.log(response);
-                //         // 可以透過 blob(), json(), text() 轉成可用的資訊
-                //         return;
-                //     })
-                // alert('stop')
-
+                xhr.send()
             }
+
+            sendAJAX(accessToken)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            // await fetch(`/tracking/clickGatheringList?id=${targetId}`)
+            //     .then((response) => {
+            //         // 這裡會得到一個 ReadableStream 的物件
+            //         console.log(response);
+            //         // 可以透過 blob(), json(), text() 轉成可用的資訊
+            //         return;
+            //     })
+            // alert('stop')
+
+            // }
 
 
 
@@ -693,12 +694,23 @@
                 return false;
             }
 
+            if (document.getElementById("main_image").files[0].size > 2 * 1024 * 1024) {
+                Swal.fire({
+                    title: 'Error!',
+                    text: '圖片尺寸過大',
+                    icon: 'error',
+                    confirmButtonText: 'OK'
+                }).then(function () {
+                    return false;
+                })
+            }
+
 
 
             if (localStorage.getItem('token')) {
                 var jwt = localStorage.getItem('token')
                 console.log('JWT', jwt)
-                alert("資料格式正確，即將為您建檔！");
+                // alert("資料格式正確，即將為您建檔！");
             } else {
                 alert('請先登入')
                 window.location.href = '/admin/signIn.html'
@@ -741,7 +753,7 @@
 
                     Swal.fire({
                         title: 'Success!',
-                        text: '活動創建成功',
+                        text: '活動創建成功，活動結束1日內(至少需有1人參加)，30獎勵積點將發放至您的帳戶',
                         icon: 'success',
                         confirmButtonText: 'OK'
                     }).then(function () {
