--- a/public/profile.html
+++ b/public/profile.html
@@ -254,6 +254,7 @@
                         <div class="mb-3">
                             <label for="main_image" class="form-label">圖片</label>
                             <input class="form-control" type="file" name="main_image" id="main_image">
+                            <p class="modal-content text-muted" style="border: none;"><small>圖片請勿超過2mb</small></p>
                         </div>
 
 
@@ -284,6 +285,41 @@
 
 
 
+
+
+    <!-- ------------------------offcanvas block------------------------------------ -->
+
+
+
+
+
+
+
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasWithBackdrop"
+        aria-labelledby="offcanvasWithBackdropLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasWithBackdropLabel">系統訊息</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="card" style="width: 100%;">
+                <ul class="list-group list-group-flush" id=sys-message-list>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <!-- ------------------------------------------------------------------------------- -->
 
 
 
@@ -439,12 +475,28 @@
             const accessToken = localStorage.getItem("token")
 
 
-
+            let profile = await fetchData('/api/1.0/user/getmemberprofile', accessToken)
             let url = location.href
+            let profileId
+            let profileData
+            if (url.split('?')[1]) {
+                profileId = url.split('?')[1].split('=')[1]
+                profileData = await fetchData(`/api/1.0/user/getprofile?id=${profileId}`, accessToken)
+
+            } else {
+                profileData = profile
+            }
 
 
 
-            let profileData = await fetchData('/api/1.0/user/getmemberprofile', accessToken)
+
+
+            // console.log('response getmemberprofile', profile)
+
+
+            user = profile.data
+
+
 
             console.log('profileData', profileData)
 
@@ -471,19 +523,19 @@
 
             cardBody.appendChild(cardName)
 
-            let cardTitle = document.createElement('h6')
-            cardTitle.className = "card-title";
-            cardTitle.appendChild(document.createTextNode('Introduction'))
+            // let cardTitle = document.createElement('h6')
+            // cardTitle.className = "card-title";
+            // cardTitle.appendChild(document.createTextNode('Introduction'))
 
 
-            let cardIntroduction = document.createElement('p')
-            cardIntroduction.className = "card-text";
-            cardIntroduction.style = "white-space: pre-line;"
-            cardIntroduction.appendChild(document.createTextNode(`${profileData.data.introduction || '未提供'}`))
-            // console.log(getgatheringDetails.data[0].description)
+            // let cardIntroduction = document.createElement('p')
+            // cardIntroduction.className = "card-text";
+            // cardIntroduction.style = "white-space: pre-line;"
+            // cardIntroduction.appendChild(document.createTextNode(`${profileData.data.introduction || '未提供'}`))
+            // // console.log(getgatheringDetails.data[0].description)
 
-            cardBody.appendChild(cardTitle)
-            cardBody.appendChild(cardIntroduction)
+            // cardBody.appendChild(cardTitle)
+            // cardBody.appendChild(cardIntroduction)
 
             let listGroupItem
 
@@ -495,20 +547,20 @@
             email.appendChild(document.createTextNode(`email ${profileData.data.email}`))
 
 
-            let age = document.createElement('li');
-            age.className = "list-group-item";
-            age.appendChild(document.createTextNode(`年齡 ${profileData.data.age || '未提供'}`))
+            // let age = document.createElement('li');
+            // age.className = "list-group-item";
+            // age.appendChild(document.createTextNode(`年齡 ${profileData.data.age || '未提供'}`))
 
 
-            let job = document.createElement('li');
-            job.className = "list-group-item";
-            job.appendChild(document.createTextNode(`職業 ${profileData.data.job || '未提供'}`))
+            // let job = document.createElement('li');
+            // job.className = "list-group-item";
+            // job.appendChild(document.createTextNode(`職業 ${profileData.data.job || '未提供'}`))
 
 
 
             let popularity = document.createElement('li');
             popularity.className = "list-group-item";
-            popularity.appendChild(document.createTextNode(`聲望 ${profileData.data.popularity}`))
+            popularity.appendChild(document.createTextNode(`積分 ${profileData.data.popularity}`))
 
 
 
@@ -524,17 +576,21 @@
             let changePicButton = document.createElement('a');
             changePicButton.className = "btn btn-primary";
             changePicButton.id = "changePic";
-            // changePicButton.style = "display: none;"
+            changePicButton.style = "display: none;"
             changePicButton.setAttribute("data-bs-toggle", "modal")
             changePicButton.setAttribute("data-bs-target", "#staticBackdrop")
             changePicButton.setAttribute("autocomplete", "off")
             changePicButton.appendChild(document.createTextNode("更換照片"))
 
+            if (user.id == profileData.data.id) {
+                changePicButton.style = "display: block;"
+            }
+
 
 
             listGroup.appendChild(email)
-            listGroup.appendChild(age)
-            listGroup.appendChild(job)
+            // listGroup.appendChild(age)
+            // listGroup.appendChild(job)
             listGroup.appendChild(popularity)
 
             listGroup.appendChild(changePicButton)
@@ -649,7 +705,7 @@
 
             const stars = document.querySelector(".ratingResult").children;
             // let ratingValue
-            let index //目前選到的星星
+            let index
 
             for (let j = 0; j < stars.length; j++) {
                 stars[j].classList.remove("fa-star")//reset 所有星星
@@ -811,6 +867,13 @@
 
 
             let hostEvent = document.getElementById("ownEvent")
+
+            if (user.id != profileData.data.id) {
+                hostEvent.style = "display:none;"
+            }
+
+
+
 
             let currentTimeforHost = new Date();
             console.log('currentTime', currentTimeforHost)
@@ -976,6 +1039,71 @@
 
 
 
+            //    --------------------------------------system messages block---------------------------- -->
+
+
+
+            const renderSystemMessage = async function (accessToken) {
+
+
+
+                let systemMessageRecord = await fetchData(`/api/1.0/chat/getsystemrecord`, accessToken)
+
+
+
+                // console.log('systemMessageRecord.data[0].content', systemMessageRecord.data[0].content)
+
+
+                let sysMessageList = document.getElementById('sys-message-list')
+
+
+                for (let i in systemMessageRecord.data) {
+                    // console.log('current user.id', user.id)
+                    // console.log('chatRecord[i].user_id', chatRecord[i].user_id)
+                    let sysMessageItem = document.createElement('li');
+
+                    // console.log('comapre', 'chatRecord[i].user_id: ', chatRecord[i].user_id, 'user.id:', user.id)
+                    sysMessageItem.className = "list-group-item"
+                    sysMessageItem.innerText = systemMessageRecord.data[i].content
+                    let sysMessageItemSmall = document.createElement('small');
+                    sysMessageItemSmall.className = "text-muted";
+                    let startTime = new Date(systemMessageRecord.data[i].created_at);
+                    sysMessageItemSmall.innerText = `${startTime.getUTCFullYear()}-${((parseInt(startTime.getUTCMonth()) + 1) < 10 ? '0' : '') + (parseInt(startTime.getUTCMonth()) + 1)}-${(startTime.getUTCDate() < 10 ? '0' : '') + startTime.getUTCDate()}  ${(startTime.getUTCHours() < 10 ? '0' : '') + startTime.getUTCHours()}:${(startTime.getUTCMinutes() < 10 ? '0' : '') + startTime.getUTCMinutes()}`
+
+
+
+
+
+
+
+
+
+                    sysMessageItem.appendChild(sysMessageItemSmall)
+
+
+                    sysMessageList.appendChild(sysMessageItem);
+
+                }
+
+
+                sysMessageList.scrollBy(0, sysMessageList.scrollHeight)
+
+
+
+
+            }
+
+
+
+
+
+
+
+            renderSystemMessage(accessToken)
+
+
+            // ---------------------------------------------------------------------------------------------- 
+
 
 
 
@@ -997,12 +1125,44 @@
 
             let dataToSent = new FormData(form)
 
-
+            // alert('check')
 
             if (localStorage.getItem('token')) {
                 var jwt = localStorage.getItem('token')
                 console.log('JWT', jwt)
-                alert("資料格式正確，即將為您建檔！");
+                console.log("files[0].size", document.getElementById("main_image").files[0].size)
+                console.log("files[0]", document.getElementById("main_image").files[0])
+
+
+                if (!document.getElementById("main_image").files[0]) {
+                    Swal.fire({
+                        title: 'Error!',
+                        text: '圖片不可為空',
+                        icon: 'error',
+                        confirmButtonText: 'OK'
+                    }).then(function () {
+                        return false;
+                    })
+                } else if (document.getElementById("main_image").files[0].size > 2 * 1024 * 1024) {
+                    Swal.fire({
+                        title: 'Error!',
+                        text: '圖片尺寸過大',
+                        icon: 'error',
+                        confirmButtonText: 'OK'
+                    }).then(function () {
+                        return false;
+                    })
+                } else {
+                    Swal.fire({
+                        title: 'Success!',
+                        text: '資料格式正確，即將為您建檔！',
+                        icon: 'success',
+                        confirmButtonText: 'OK'
+                    }).then(function () {
+                        window.location.reload();
+                    })
+                }
+
             } else {
                 alert('請先登入')
                 window.location.href = '/admin/signIn.html'
@@ -1035,7 +1195,7 @@
 
             xhr.onreadystatechange = function () {
                 if (xhr.readyState === 4 && xhr.status === 200) {
-                    console.log('apiResponse.data', xhr.responseText)
+                    // console.log('apiResponse.data', xhr.responseText)
                     // if (xhr.responseText == 'admin') {
                     //     alert('已成功輸入一筆資料')
                     //     window.location.href = '/admin/product.html'
