fixed chat room bug

--- a/public/gathering.html
+++ b/public/gathering.html
@@ -1875,6 +1875,22 @@
 
 
 
+                    socket.on(`all_changeParticipant_${location.href.split('?')[1].split('=')[1]}`, function (msg) {
+
+                        window.location.reload()
+
+
+                    })
+
+
+
+
+
+
+
+
+
+
 
 
 
