--- a/public/gathering.html
+++ b/public/gathering.html
@@ -337,6 +337,15 @@
                 </div>
 
 
+                <!-- -----------------------  mouse ------------------------- -->
+
+
+                <div class="centered">
+                    <div class="mouse-scroll"></div>
+                </div>
+
+
+
 
 
                 <div id="commentList">
@@ -494,7 +503,7 @@
             </div> -->
                 <div id=groupChatRoom style="height: 95vh;">
 
-                    <h6 style=" text-align: center;">成員</h6>
+                    <h6 style=" text-align: center; margin-top: 10px;">成員</h6>
                     <ul id="participants"></ul>
 
                     <h6 style=" text-align: center;">群組聊天室</h6>
@@ -524,7 +533,8 @@
                     <ul id="messages"></ul>
                     <div>
                         <form id="messagesForm" action="">
-                            <input id="messageInput" autocomplete="off" /> <button>Send</button>
+                            <input id="messageInput" autocomplete="off" /> <button
+                                class="btn btn-secondary">Send</button>
                         </form>
                     </div>
                 </div>
