--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Project</title>
+    <title>toGather</title>
 
     <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
 
@@ -39,9 +39,9 @@
         }
     </style> -->
 
-    <style type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    </style>
 
 
 
@@ -81,24 +81,31 @@
     <div class="wrap">
 
         <!-- ---------------------- header --------------------------- -->
-        <div id="header">
-            <nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: #e3f2fd;">
-                <div class="container-md" style="width: 83%; max-width: 90%;">
+        <!-- #e3f2fd; -->
+        <div id="header" style="position: absolute;">
+            <nav class="navbar navbar-light fixed-top navbar-expand-lg"
+                style="background-color: rgba(255, 255, 255); padding:0%; padding-top: 5px">
+                <div class="container-md" style="width: 90%; max-width: 90%; height:60px">
 
                     <a class="navbar-brand logo name" href="./index.html">
-                        <img src="./assets/logo5.png" alt="" width="230" height="60">
+                        <img src="./assets/new_logo2.png" alt="" height="35">
                     </a>
                     <div id="main-header">
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav" style="align-items: center;">
 
-                                <li class="nav-item" style="margin: 3px 10px 0 0;">
+                                <li class="nav-item" style="margin: 0px 15px 0 0; display: flex;">
                                     <a class="nav-link" href="#">
-                                        <div class="host">
-                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                        <div class="host" style="display: flex;">
+                                            <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                                 data-bs-target="#staticBackdrop" id="hostbutton">
                                                 我要開團
-                                            </button>
+                                            </button> -->
+
+
+                                            <a href="#" class="btn btn-white btn-animate" data-bs-toggle="modal"
+                                                data-bs-target="#staticBackdrop" id="hostbutton">我要開團</a>
+
 
                                         </div>
                                     </a>
@@ -107,11 +114,15 @@
 
 
 
-                                <li class="nav-item" style="margin: 3px 10px 0 0;" data-bs-toggle="offcanvas"
+                                <li class="nav-item" style="margin: 0 0 0 0;" data-bs-toggle="offcanvas"
                                     data-bs-target="#offcanvasWithBackdrop" aria-controls="offcanvasWithBackdrop">
-                                    <a class="nav-link" href="#">
-                                        <img src="./assets/6590582_box_email_mail_mailbox_icon.png"
-                                            style="width: 36px;">
+                                    <a class="nav-link" href="#" style="display: flex;">
+                                        <!-- <img src="./assets/6590582_box_email_mail_mailbox_icon.png"
+                                            style="width: 36px;"> -->
+
+                                        <span class="material-icons">
+                                            all_inbox
+                                        </span>
                                     </a>
                                 </li>
                                 <!-- <li class="nav-item" style="display: flex;">
@@ -124,9 +135,9 @@
                                                 d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
                                         </svg></a>
                                 </li> -->
-                                <li class="nav-item dropdown">
+                                <li class="nav-item dropdown" style="margin: 0 0 0 0;">
                                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        data-bs-toggle="dropdown" aria-expanded="false" style="display: flex;">
 
                                         <!-- <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
                                             fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -134,10 +145,14 @@
                                             <path fill-rule="evenodd"
                                                 d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
                                         </svg> -->
-                                        <img src="./assets/3018530_buyer_customer_figure_person_portrait_icon.png"
-                                            style="width: 36px;">
+                                        <!-- <img src="./assets/3018530_buyer_customer_figure_person_portrait_icon.png"
+                                            style="width: 36px;"> -->
+                                        <span class="material-icons">
+                                            account_circle
+                                        </span>
                                     </a>
-                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <ul class="dropdown-menu dropdown-menu-lg-end"
+                                        aria-labelledby="navbarDropdownMenuLink">
                                         <li><a class="dropdown-item dropdown-sign" href="/sign.html"
                                                 style="display: block;">登入</a>
                                         </li>
@@ -158,20 +173,30 @@
         </div>
         <!-- -------------------------------------------------- -->
 
-        <div id="search-box" class="input-group rounded" style="width: 80%; margin:0 auto 3px auto;">
-            <input id="search-input" type="search" class="form-control rounded" placeholder="搜尋您想要的活動"
-                aria-label="Search" aria-describedby="search-addon" />
-            <span class="input-group-text border-0" id="search-addon">
-                <i class="bi bi-search"></i>
-            </span>
-        </div>
+        <div id="search-box-placeholder">
+            <!-- <div id="search-box" class="input-group rounded" style="width: 80%; margin:0 auto 3px auto;">
+                <input id="search-input" type="search" class="form-control rounded" placeholder="搜尋您想要的活動"
+                    aria-label="Search" aria-describedby="search-addon" />
+                <span class="input-group-text border-0" id="search-addon">
+                    <i class="bi bi-search"></i>
+                </span>
+            </div> -->
 
+            <search style="width: 45%; margin:0 auto;height: 80px;">
+                <form>
+                    <input class='searchbar transparent' id='search' type='text' placeholder='請輸入您想找的活動' />
+                    <input class='searchbutton transparent' id='searchbutton' type="submit" value='找活動' />
+                </form>
+            </search>
+
+        </div>
         <!-- <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBackdrop"
             aria-controls="offcanvasWithBackdrop">Enable backdrop (default)</button> -->
 
 
-        <div id="center">
 
+        <div id="center" aria-live="polite" aria-atomic="true" style="position: relative;">
+            <!-- <hr size="3px" align="center" width="100%"> -->
 
             <div id="left">
 
@@ -227,21 +252,29 @@
             </div> -->
 
 
-                <div id="gathering-list" style="height:90vh; "></div>
+                <div id="gathering-list" style="height:99vh; "></div>
 
             </div>
 
 
 
-
-
-            <div id="map" style="position: absolute;"></div>
-
+            <!-- <div aria-live="polite" aria-atomic="true" style="position: relative;"> -->
 
 
 
-        </div>
 
+
+            <div id="map"></div>
+
+
+            <div class="toast-container position-absolute bottom-0 end-0 p-3" id="toastPlaceholder"
+                style="width: 300px; max-width: 300px; position: relative; max-height: 90%;">
+                <!-- Then put toasts within -->
+
+            </div>
+
+            <!-- </div> -->
+            <!-- 
 
         <div id="message-block" aria-live="polite" aria-atomic="true" class="position-relative" style="max-height: 90%">
             <!-- Position it: -->
@@ -253,10 +286,8 @@
                 <!-- Then put toasts within -->
 
 
-
-
             </div>
-        </div>
+        </div> -->
 
 
 
@@ -477,7 +508,7 @@
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbmXJHj0WUd8Zy-neXlew88hmIkB4bnwI&callback=initMap&v=weekly"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwLNX2P4gamMMFc7dckwq7LRmVYvmWmDI&callback=initMap&v=weekly"
         async></script>
 
 
